# LinkedIn-Referencia

./: .gitignore
C#/BreakAlarm/: BreakAlarm.sln
C#/BreakAlarm/BreakAlarmApp/: AlarmSoundPlayer.cs  App.xaml  App.xaml.cs  BreakAlarmApp.csproj  ExternalAlarm.cs  ExternalAlarms.cs  MainDC.cs  MainWindow.xaml  MainWindow.xaml.cs  TimedAlarm.cs  TimedAlarms.cs
C#/BreakAlarm/BreakAlarmApp/Common/: Extensions.cs  Utils.cs
C#/BreakAlarm/BreakAlarmApp/Converters/: BoolToBrushRedGreenConverter.cs  TimeSpanConverter.cs
C#/BreakAlarm/BreakAlarmApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
C#/ComponentCheckOCL/: ComponentCheckOCL.sln
C#/ComponentCheckOCL/CommonLib/: CommonLib.csproj  DebugText.cs
C#/ComponentCheckOCL/CommonLib/Components/: ImagePositionConverter.cs  MouseVectorCalculator.cs  ObservableProperty.cs
C#/ComponentCheckOCL/CommonLib/Converters/: LanguageConverter.cs
C#/ComponentCheckOCL/CommonLib/Interfaces/: IVideoCaptureDevice.cs
C#/ComponentCheckOCL/CommonLib/Types/: Int32Size.cs
C#/ComponentCheckOCL/ComponentCheckApp/: App.xaml.cs  ComponentCheckApp.csproj  MainViewModel.cs  MainWindow.xaml.cs  ResourceKeys.cs
C#/ComponentCheckOCL/ComponentCheckApp/Components/: DllFiles.cs  FileExistChecker.cs  ImageBackup.cs
C#/ComponentCheckOCL/ComponentCheckApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs
C#/ComponentCheckOCL/D4I4OLib/: D4I4O.cs  D4I4OLib.csproj
C#/ComponentCheckOCL/ImageProcessLib/: ColorDepth.cs  ImageProcessLib.csproj
C#/ComponentCheckOCL/ImageProcessLib/Components/: SelectionRectangle.cs  ShapeRotate.cs
C#/ComponentCheckOCL/ImageProcessLib/OpenCL/: OCLCrop.cs  OCLMonochromeEdgeTrackingWithHysteresis.cs  OCLMonochromeGaussianBlur.cs  OCLMonochromeNonMaxSuppression.cs  OCLMonochromeSobel.cs  OCLResize.cs  OCLShapeBorderCrop.cs  OCLShapeFinder.cs  OCLShapePixelCounter.cs
C#/ComponentCheckOCL/IoCLib/: Container.cs
C#/ComponentCheckOCL/IoCLib/Properties/: AssemblyInfo.cs
C#/ComponentCheckOCL/Test/: Test.csproj
C#/ComponentCheckOCL/UVCLib/: UVCDevice.cs  UVCDeviceScanner.cs
C#/ComponentCheckOCL/UVCLib/Components/: PropertiesWindow.xaml
C#/ComponentCheckOCL/UVCLib/DirectShow/: FilterInfo.cs  FilterInfoCollection.cs  Uuids.cs  VideoCapability.cs  VideoCaptureDevice.cs
C#/Demo0/: LastUniCamSoftwares.sln
C#/Demo0/App/UniCamApp/: App.xaml  App.xaml.cs  AppDC.cs  AppWindow.xaml  AppWindow.xaml.cs  UniCamApp.csproj
C#/Demo0/CodeBase/AppLog/: AppLog.csproj  AppLogDC.cs  AppLogMessage.cs  AppLogV.xaml  AppLogV.xaml.cs  AppLogWindow.xaml  AppLogWindow.xaml.cs  ILog.cs
C#/Demo0/CodeBase/Common/: Common.csproj  Enums.cs  Extensions.cs  ObjectContainer.cs  Utils.cs
C#/Demo0/CodeBase/CommonComponent/: CommonComponent.csproj
C#/Demo0/CodeBase/Communication/: Communication.csproj
C#/Demo0/CodeBase/CustomControl/: CustomControl.csproj  ElementHasResultAndIdMiniatureV.xaml  ElementHasResultAndIdMiniatureV.xaml.cs
C#/Demo0/CodeBase/ImageProcess/: ImageProcess.csproj
C#/Demo0/CodeBase/ImageSourceDevice/: IHasImageSourceDevice.cs  IImageSourceDevice.cs  IImageSourceDeviceOutput.cs  IImageSourceDeviceProperties.cs  IImageSourceDeviceScanner.cs  (+4 more)
C#/Demo1/: VisualBlocks.sln
C#/Demo2/: CSProjects.sln
C#/Demo3/: Softwares.sln
C++/Demo0/: CMakeLists.txt
C++/Demo0/Test/: CMakeLists.txt  Test0.cpp
C++/Demo1/: CMakeLists.txt
C++/Demo1/Tutorials/OpenGL/LearnOpenGL/: CMakeLists.txt  main.cpp  shader.hpp
C++/Demo1/Tutorials/Vulkan/VulkanTutorial_IndexBuffer/: CMakeLists.txt  main.cpp
C++/Demo1/Tutorials/Vulkan/VulkanTutorial_StagingBuffer_CPP/: CMakeLists.txt  VulkanTutorial_IndexBuffer_CPP.cpp
C++/Demo1/Workspace/App/: CMakeLists.txt  buildNumberIncrementScript.cmake
C++/Demo1/Workspace/App/inc/: App.hpp  BuildNumber.hpp
C++/Demo1/Workspace/App/src/: App.cpp
C++/Demo1/Workspace/ApplicationFramework/: CMakeLists.txt
C++/Demo1/Workspace/ApplicationFramework/inc/: Application.hpp  ApplicationDescription.hpp  ColorRGBA.hpp  ConsoleLog.hpp  Constants.hpp  Defines.hpp  ExceptionHandler.hpp  ILog.hpp  Language.hpp  Log.hpp  NonCopyable.hpp  StartupParameters.hpp  Version.hpp  Window.hpp
C++/Demo1/Workspace/ApplicationFramework/src/: Application.cpp  ApplicationDescription.cpp  ConsoleLog.cpp  Constants.cpp  ExceptionHandler.cpp  ILog.cpp  Language.cpp  StartupParameters.cpp  Version.cpp  Window.cpp
C++/Demo2/: Firmware.sln
Combined/Balance/: Balance.sln
Combined/Balance/BalanceApp/: App.xaml.cs  BalanceApp.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs
Combined/Balance/BalanceFirmware/: BalanceFirmware-Debug.vgdbsettings  BalanceFirmware-Release.vgdbsettings  stm32.xml
Combined/Balance/BalanceFirmwareGenerated/: .mxproject  fw.gpdsc  fw.ioc
Combined/Balance/BalanceLib/: Balance.cs  BalanceLib.csproj  ObservableProperty.cs
Combined/Balance/BalanceTest/: BalanceTest.csproj  Program.cs
Combined/ViPro/App/: ViProEditor.sln  ViProRunner.sln
Combined/ViPro/Firmware/: CMakeLists.txt
Combined/ViPro/Firmware/PC_Windows/: CMakeLists.txt
Combined/ViPro/Firmware/PC_Windows/src/: main.cpp
(+1570 files in other folders)
